<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="400dp"
        android:text="@string/vacio"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_x="19dp"
        android:layout_y="106dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="87dp"
        android:text="@string/prestamosapedir"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="164dp"
        android:text="@string/tipodeinteres"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_x="19dp"
        android:layout_y="185dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="262dp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="245dp"
        android:text="@string/anos"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="336dp"
        android:text="@string/calccuota" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="26dp"
        android:layout_y="19dp"
        android:src="@drawable/appicon" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="80dp"
        android:layout_y="26dp"
        android:text="@string/titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45px" />

</AbsoluteLayout>